versao final da minha parte

--- a/modelo_seminarios_latex_v1.2/artigo.tex
+++ b/modelo_seminarios_latex_v1.2/artigo.tex
@@ -155,7 +155,7 @@ Para ser considerado livre, um \textit{software} deve seguir determinadas "leis"
 
 Um dos principais questionamentos quando o assunto é tratado é como empresas podem faturar fabricando código aberto. Como será exposto posteriormente, existem diversos modelos de negócios que podem ser abordados para este fim.
 
-Este artigo seguirá a seguinte estrutura: na seção 2, será mostrada a motivação para este estudo. Na seção 3, o tema \textit{software} livre será abordado de maneira mais detalhada, bem como modalidades que onde este é encontrado. Na seção 4, será realizado um breve estudo sobre as principais licenças de publicação. Finalmente, na seção 5, será tratado como empresas podem fazer o uso de \textit{software} livre: tanto no lado cliente quanto no lado empresas produtoras. A seção 6 fará uma discussão sobre o futuro da distribuição dos \textit{softwares} e como o \textit{software} livre se encaixa nessa realidade futura.
+Este artigo seguirá a seguinte estrutura: na seção 2, será mostrada a motivação para este estudo. Na seção 3, o tema \textit{software} livre será abordado de maneira mais detalhada, bem como modalidades onde este é encontrado. Na seção 4, será realizado um breve estudo sobre as principais licenças de publicação. Finalmente, na seção 5, será tratado como empresas podem fazer o uso de \textit{software} livre: tanto no lado cliente quanto no lado empresas produtoras. A seção 6 fará uma discussão sobre o futuro da distribuição dos \textit{softwares} e como o \textit{software} livre se encaixa nessa realidade.
 
 
 %------------------------------------------------
@@ -232,11 +232,11 @@ tarara
 
 \section{Software Livre Para Empresas}
 
-O uso de \textit{software} livre em ambientes domésticos e comerciais tem crescido bastante nos últimos anos. O governo brasileiro, inclusive, tem investido bastante em soluções livres nos seus computadores \cite{Jose:2016}. O mercado em geral também está abraçando a ideia e isso tem feito com que cada vez mais empresas surjam com foco no desenvolvimento de aplicaçãoes baseadas em \textit{software} livre \cite{Hecker:2016}.
+O uso de \textit{software} livre em ambientes domésticos, comerciais e empresariais tem crescido bastante nos últimos anos. O governo brasileiro, inclusive, tem investido bastante em soluções livres nos seus computadores \cite{Jose:2016}. O mercado em geral também está abraçando a ideia e isso tem feito com que cada vez mais empresas surjam com foco no desenvolvimento de aplicaçãoes baseadas em \textit{software} livre \cite{Hecker:2016}.
 
 Para o cliente, há inúmeros benefícios no uso de \textit{software} livre em suas máquinas. Em primeiro lugar: economia. Para o usuário final, isso significa menos um custo. Para empresas, uma enorme economia.
 
-Para facilitar, pode-se imaginar uma empresa imaginária de \textit{call center}: em uma empresa deste tipo, há muitos computadores. A empresa imaginária teria 1000 computadores para uso dos atendentes mais 200 computadores para uso de supervisores e gerentes. No total 1.200 máquinas que precisam de um sistema operacional e, no caso das máquinas dos supervisores e gerentes, suíte de escritório.
+Para facilitar, pode-se imaginar uma empresa de \textit{call center}: em uma empresa deste tipo, há muitos computadores. A empresa imaginária teria 1000 computadores para uso dos atendentes mais 200 computadores para uso de supervisores e gerentes. No total, 1.200 máquinas que precisam de um sistema operacional e, no caso das máquinas dos supervisores e gerentes, suíte de escritório.
 
 Levando em conta que o custo médio da licença de um sistema operacional proprietário é R\$ 200,00, apenas com este recurso, a empresa gastaria R\$ 240.000,00. Com o uso de \textit{software} livre, a empresa economizaria bastante dinheiro ao adotar um sistema operancional de código aberto, como o Debian.
 
@@ -256,7 +256,7 @@ A Red Hat é, sem dúvida, uma das mais bem sucedidas empresas no ramo do \texti
 
 Essas empresas todas trabalham desenvolvendo \textit{software} livre e tem uma receita considerável. Existem inúmeros outros exemplos de sucesso com o \textit{software} livre: Android, Apache, LibreOffice, Swift são exemplos de aplicações de sucesso no mundo do \textit{software} livre. 
 
-Existem inúmeras abordagens de mercado para fatura com \textit{software} livre. Venda de suporte, treinamento, consultoria, propaganda, dentre outros, são alguns exemplos disso. A seguir, será apresentado as três principais abordagens de mercado para o \textit{software} livre.
+Existem inúmeras abordagens de mercado para faturar com \textit{software} livre. Prover suporte, treinamento, consultoria, propaganda, dentre outros, são alguns exemplos disso. A seguir, será apresentado as três principais abordagens de mercado para o \textit{software} livre.
 
 \subsection{estatisticas de mercado para saap}
 oi
@@ -271,7 +271,7 @@ aqui vc faz
 O Open Core é um modelo de negócio baseado no uso misto entre \textit{software} livre e \textit{software} fechado. No Open Core, as empresas disponibilizam uma versão básica, porém útil, de algum sistema feito como \textit{software} livre e vendem complementos para esse sistema \cite{riehle2012single}. Esse complementos, como o próprio nome deixa claro, acrescenta alguma funcionalidade no sistema. Existem inúmeras soluções baseadas no Open Core, como o MySQL da Oracle. É um modelo de negócio muito interessante pois permite que empresas foquem no desenvolvimento de partes pequenas do sistema, produzindo com melhor qualidade e podendo oferecer um melhor suporte.
 A já citada Red Hat também faz uso do Open Core no seu serviço JBoss. 
 
-Para os clientes, é uma abordagem bastante interessante por que permite economizar ao usar um grande \textit{software} livre gratuito e comprar apenas complementos que esta precise.
+Para os clientes, é uma abordagem bastante interessante por que permite economizar ao usar um grande \textit{software} livre gratuito e comprar apenas complementos que precisar.
 
 Há controvérsias acerca da legitimidade do Open Core como sendo \textit{software} livre. Muitas pessoas dizem que pelo fato dos complementos serem, geralmente, de código fechado, não há como classificá-lo como \textit{software} livre. Porém, é uma estratégia de bom senso e que vem dando certo no mercado em geral.
 
