--- a/modelo_seminarios_latex_v1.2/artigo.tex
+++ b/modelo_seminarios_latex_v1.2/artigo.tex
@@ -243,34 +243,45 @@ acesso ao software
 \section{Licenças de Publicação}
 
 Após o crescimento exponencial da produção de dispositivos eletrônicos e com a popularização dos mesmos,iniciou-se uma grande demanda pela produção de programas lógicos que pudessem tornar os dispositivos físicos mais úteis e aplicáveis para o público em geral. A produção de \textit{software} teve um aumento de mercado e procura, com isso surgiram formas de regulamentação da venda ou distribuição dessas aplicações.
+
 Uma licença de software pode ser caracterizado como uma forma de comportamento relacionada com a redistribuição de \textit{software}, a exemplo dos Estados Unidos, toda distibuição de software está sob a proteção de \textit{copyright} (ou direito de cópia).
+
 O \textit{copyright} é um direito legal que garante ao criador de um trabalho (no caso, desenvolvedores de \textit{software}) direitos exclusivos sobre a sua obra. O código fonte é considerado como propriedade intelectual do autor, podendo ser ele uma empresa, um grupo isolado de desenvolvedores ou um único programador.
+
 As licenças de software garantem ao licenciado (usualmente, o licenciado é o usuário final, ver subseção 1.3) de um \textit{software}, normalmente, uso livre nas fronteiras dos direitos exclusivos do distribuidor. A exceção é a licença de domínio público, onde a cópia, distribuição e modificação são permitidas sobre um código fonte de uma aplicação.
 Existem duas licenças maiores que se distinguem em como elas se comportam em relação a duas permissões básicas: o direito de modificar e reusar um \textit{software}. A primeira é a licença proprietária (popularmente conhecida como código fechado), nela, ambos os direitos de modificação e reuso não são licenciados, a outra é a licenças de código \textit{FOSS} (\textit{Free and Open Source Software}) onde ambos os direitos são garantidos para o licenciado.
-\begin{table}
-\label{tag_tabela_1}
+
+\begin{table}[h!]
+\label{tag_tabela_2}
 \caption{Resumo dos direitos garantidos pelas licenças de software}
-	\begin{tabular}{cccc}
-							&	Domínio Público	&	\textit{FOSS}				&	Licença Proprietária
-	Direito de cópia		&	Sim				&	Sim							&	Não
-	Direito de modificar	&	Sim				&	Sim							&	Não
-	Direito de distribuição	&	Sim				&	Sim, sob a mesma licença	&	Não
+	\begin{tabular}{ccccc}
+	\hline
+	Direito de		&	Domínio Público	&	\textit{FOSS}	&	Licença Proprietária \\ \hline
+	Cópia	&	Sim	&	Sim	&	Não							\\
+	Modificar	&	Sim	&	Sim	&	Não						\\
+	Distribuição	&	Sim	&	Sob a mesma licença	&	Não\\ \hline
 	\end{tabular}
-\end{table}
+	\end{table}
+	
 Alguns exemplos de \textit{software} sob cada uma das licenças são: SQLite e o CERN HTTPd para licenças de domínio público; o kernel do Linux e o \textit{webserver} Apache para licenças de software livre e o Windows e o Mac OSX.
 Dentro da licença \textit{FOSS}, várias empresas mantêm definições no tocante as suas licenças. Contudo, a Free Software Foundation segue uma definição mais geral de \textit{software} livre e dispõe de diversas licenças seguindo tal definição. As licenças compatíveis com as orientações da Free Software Foundation são categorizados como produtos sob a licença \textit{copylefted}. Dentro do \textit{copyleft}, temos inúmeros e distintos exemplos de licenças de \textit{software}, um deles é a \textit{General Public License} que garante o direito ilimitado de reprodução, cópia, estudo e modificação. 
+
 Existem também as chamadas licenças permissivas que tem como objetivo estabelecer o mínimo de requerimentos possíveis para a distribuição e uso do \textit{software}. Entre elas estão a licença BSD (\textit{Berkeley Software Distribution}) e a \textit{MIT License}, que obtém o mínimo de restrição no quesito distribuição, porém com livre acesso para uso, estudo, cópia, etc. Assim, licenças permissivas permitem o uso do \textit{software} até mesmo na constituição de um \textit{software} maior com licença proprietária.
 
 \section{Software Livre Para Empresas}
 
 
-\subsection{estatisticas de mercado para saap}
+\subsection{Estatísticas De Mercado Para Software Como Um Produto}
 oi
 
 
-\subsection{Software as a service}
+\subsection{Software Como Um Serviço}
 
-aqui vc faz
+Serviçoes de software se popularizaram no meio de desenvolvedores como uma ramificação de destinos de produção de software onde há ausência de liberdades. Muito se deve a competitividade e a flexibilidade mudança entre os serviços de um mesmo tipo. O próprio Richard Stallman classificou esse modelo de negócio como intrinsecamente ruim para sua fundação de software livre. 
+
+As licenças \textit{Affero GPL} são licenças derivadas de \textit{FOSS} dedicadas à um exemplo de serviço de software, um provedor de serviços. O provedor de serviços é uma generalização de serviços básicos ou avançados para clientes dedicados à uma rede específica. Existiram duas versões da Affero, a primeira é baseada na segunda versão do \textit{GNU General Public License}, enquanto a segunda versão, que está historicamente ligada com a primeira, e é compatível com a \textit{GNU Affero General Public License}.
+
+Empresas como a RedHat oferecem serviços de \textit{software} sob licenças livres. Um deles é o gerenciador de \textit{cloud services} ManageIQ, que, além de ter seus servços básicos livres, também é de código aberto.
 
 \subsection{core}
 
@@ -289,7 +300,7 @@ olar
 
 \vspace{1.0cm}
 \parpic{\includegraphics[width=1.5in,clip,keepaspectratio]{gabriel.jpg}}
-\noindent {\bf Gabriel Silva Vinha} nasceu no Brasil, no estado de São Paulo e na cidade de São Paulo. Atualmente, está na graduação em ciência da computação, pela Universidade Federal de Campina Grande. Atualmente, é desenvolvedor part-time em um projeto da parceria entre o Laboratório de Sitemas Distribuídos, \textit{Software Practices Laboratory}, Lenovo Brasil e \textit{RedHat International}. Tem interesse na área de desenvolvimento web, com foco em aplicações e sistemas em nuvem.
+\noindent {\bf Gabriel Silva Vinha} nasceu no Brasil, no estado de São Paulo e na cidade de São Paulo.Foi selecionado, no ano de 2014, pela embaixada dos Estados Unidos da América como um dos representantes da juventude pelo programa Jovens Embaixadores. Participou do programa de monitoria no Departamento de Sistemas e Computação, na Universidade Federal de Campina Grande. Atualmente, está na graduação em ciência da computação, pela Universidade Federal de Campina Grande. É membro do Laboratório de Sitemas Distribuídos e do \textit{Software Practices Laboratory}. É desenvolvedor part-time em um projeto da parceria entre o Laboratório de Sitemas Distribuídos, \textit{Software Practices Laboratory}, Lenovo Brasil e \textit{RedHat International}. Tem interesse na área de desenvolvimento web, com foco em aplicações e sistemas em nuvem.
 
 
 
