segurando na mao de deus

--- a/modelo_seminarios_latex_v1.2/artigo.tex
+++ b/modelo_seminarios_latex_v1.2/artigo.tex
@@ -220,11 +220,21 @@ aqui vc faz
 
 \subsection{Software as a Service}
 
-olar
+O Software como Serviço, do inglês \textit{Software as a Service} (SaaS), é o nome que se dá ao modo de comercialização de \textit{software} que não se baseia na venda de licenças de uso, e sim na cobrança de uma taxa regular para sua utilização. Diferente da forma tradicional de distribuição de \textit{software}, onde os usuários adquirem uma licença e são responsáveis pela instalação e manutenção do sistema, essas aplicações são executadas exclusivamente nos servidores dos seus provedores, fazendo-se necessária ao usuário apenas uma conexão com a Internet para utilizá-las.
+
+Neste modelo, os fornecedores são inteiramente responsáveis pela manutenção das estruturas necessárias (servidores, conexões, segurança, entre outras) para a disponibilização do sistema, e o usuário utiliza o serviço através da Internet mediante pagamento de uma certa taxa recorrente. 
+
+Existem diversas formas de se cobrar por estes serviços. As mais comuns variam entre cobrar um valor (na maioria das vezes mensal) proporcional ao número de licenças utilizadas, cobrar um valor proporcional ao uso, e modelos \textit{freemium} que oferecem serviços gratuitos mas cobram por recursos adicionais.
+
+Um exemplo de SaaS é o OpenStack, oferecido pela empresa RedHat, que está para a computação em nuvem assim como o sistema operacional está para os computadores. Trata-se de um conjunto de softwares que possibilitam a criação de ferramentas para o gerenciamento de nuvens públicas ou privadas, planejado numa parceria entre a NASA e a RacksPace Hosting com o objetivo de que as empresas consumissem serviços em nuvem com elementos de \textit{hardware} padrão.
 
 \subsection{Componentes da Produção de Software}
 
-acesso ao software
+De acordo com a definição criada pela Free Software Foundation, \textit{software} livre é aquele que pode ser usado, modificado, estudado, copiado e redistribuído sem restrições. Para um usuário leigo, isso talvez não signifique muita coisa, mas para um usuário desenvolvedor, lhe dá a liberdade de modificar o \textit{software} livremente para que melhor se adapte as suas necessidades, ou para redistribuí-lo de alguma forma. É o que acontece com o sistema operacional Ubuntu, patrocinado pela empresa Cannonical Ltd., que permite que seus usuarios contribuam para o desenvolvimento do sistema.
+
+A liberdade de modificar ou redistribuir o \textit{software} implica na necessidade de acesso ao código-fonte, mas para que essa liberdade seja real, essas modificações devem acontecer sem que o distribuidor original possa refutá-las sem algum motivo. Caso isso aconteça, o software não é livre.
+
+Para isso, foram criadas as licenças de \textit{software}, que consistem nas ações que um usuário pode ou não executar em relação a um determinado software. 
 
 \section{Licenças de Publicação}
 
