--- a/modelo_seminarios_latex_v1.2/artigo.tex
+++ b/modelo_seminarios_latex_v1.2/artigo.tex
@@ -218,7 +218,11 @@ Entram então alguns conceitos importantes a respeito de \textit{software} livre
 
 \subsection{Software as a Product}
 
-\textit{Software as a Product}//citação aqui?? -- ou \textit{Software} como um Produto, em tradução livre --
+\textit{Software as a Product} é a referência ao \textit{software} oferecido como produto. Pensando-se em \textit{software} proprietário, um exemplo seria a compra de uma licença de uso de um produto como o Microsoft Office, em que a compra proporciona o uso do \textit{software} sem custos adicionais, nem assinatura mensal. É a política do "comprei, é meu", limitada a um \textit{software} que não tem código aberto.
+
+De volta ao contexto de \textit{software} livre, como exemplo de produto, há o Ubuntu, distribuição Linux desenvolvida pela Canonical. Ao instalar o sistema, o usuário têm o produto por quanto tempo quiser. Adaptando a política citada acima, para o \textit{software} livre, o certo a dizer é então "baixei, é meu".
+
+O Ubuntu é apenas um exemplo de produto. Há vários outros, como a maior parte das distribuições Linux, \textit{softwares} comuns como o Firefox (Mozilla), e ferramentas avançadas de desenvolvimento, como Gimp (GNU), Eclipse e Netbeans (Oracle). Esses programas são de código aberto, e o usuário escolhe a versão que deseja, bem como as atualizações. No entanto, há o outro lado dos \textit{softwares}: os que são feitos para estarem constantemente integrados e atualizados. Daí vem o conceito de \textit{software} como um serviço.
 
 \subsection{Software as a Service}
 
@@ -235,9 +239,15 @@ tarara
 \section{Software Livre Para Empresas}
 
 
-\subsection{estatisticas de mercado para saap}
-oi
+\subsection{Estatisticas de Mercado para SaaP}
 
+Ao pensar em \textit{software} livre como um produto, do ponto de vista comercial, leva ao questionamento a respeito dos custos que uma empresa pode ter, e de como arrecadar fundos para cobrí-los. Como já citado, gratuidade não é um pré-requisito de \textit{software} livre. Sendo assim, há três principais formas de arrecadação das empresas no mercado atual.
+
+A venda de softwares é uma das alternativas que desenvolvedoras como RedHat e Suse, por exemplo, adotaram para obtenção de lucros. O RedHat Enterprise Linux é a distribuição Linux desenvolvida pela empresa de seu nome. Possue foco empresarial, e como há todo um suporte exclusivo para isso, os custos são elevados. Sendo assim, é uma distribuição paga. O mesmo acontece com o Suse Linux.
+
+Há também aquelas que se mantêm atraveś de doações. A ideia é continuar oferecendo \textit{software} livre de forma gratuita. No entanto, deve haver alguma forma para o sustento da empresa. Desenvolvedoras como a Canonical, por exemplo, adotaram então o sistema de doações. Ao fazer o \textit{download} do Ubuntu, o usuário é direcionado a uma página sugerindo uma doação com o valor que achar que justo à empresa. Logicamente, isso é opcional.
+
+A terceira alternativa de sustentação de uma empresa que lida com \textit{software} livre, é o conjunto publicidade e parcerias. O correto a dizer seria que a publicidade vem através de parcerias. Essas últimas são comuns já que as desenvolvedoras costumam colocam \textit{softwares} terceiros integrados aos seus, como uma forma de promovê-los e receber patrocínio em troca. É o caso por exemplo da Mozilla, que em 2011, recebeu \textit{royalties}*referencia aqui* da Google por adotar o buscador como padrão do Firefox.
 
 \subsection{Software as a service}
 
@@ -284,6 +294,9 @@ in the area of machine learning for image analysis in peer reviewed
 journals and conferences. Currently she is a Senior Research Fellow at
 Loughborough University leading the project on imaging for road transport
 applications.   
+
+\parpic{\includegraphics[width=1.5in,clip,keepaspectratio]{italo.jpg}}
+\noindent {\bf Italo Menezes} nasceu em Recife, capital de Pernambuco, Brasil. Graduando do curso de Ciência da Computação pela Universidade Federal de Campina Grande, participou do Programa de Iniciação Científica Jr. pela OBMEP em parceria com o IMPA e o CNPq. Fez curso técnico em Desenvolvimento para Web. Atualmente, é membro do projeto de capacitação da Sony do Laboratório de Sistemas Embarcados e Computação Pervasiva (Embedded Lab). Tem interesse em Engenharia de Software e Desenvolvimento para Sistemas Embarcados, com foco em Mobile e Web.
 
 
 %\end{tabular}
